Modificando ruta de estaticos

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="public/css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <link rel="stylesheet" href="css/fontello.css">
-        <link rel="stylesheet" type="text/css" href="css/jsCalendar.css">
+        <link rel="stylesheet" href="public/css/fontello.css">
+        <link rel="stylesheet" type="text/css" href="public/css/jsCalendar.css">
 
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="public/css/bootstrap.min.css">
     </head>
     <body>
         <header>
@@ -112,8 +112,8 @@
         </footer>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="js/jquery-3.3.1.slim.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/jsCalendar.js"></script>
+        <script src="public/js/jquery-3.3.1.slim.min.js"></script>
+        <script src="public/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="public/js/jsCalendar.js"></script>
     </body>
 </html>
