Ruta de imagenes

--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,16 @@
         <header>
             <div class="container-fluid">
                 <div class="logo">
-                    <img src="img/LogoUCAB600x123.png" alt="">
+                    <img src="public/img/LogoUCAB600x123.png" alt="">
                 </div>
                 <div class="calendar auto-jsCalendar material-theme green"></div>
-                <img class="img-fluid d-block mx-auto" src="img/WhatsApp Image 2019-01-18 at 6.06.30 PM.jpeg" alt="">
+                <img class="img-fluid d-block mx-auto" src="public/img/WhatsApp Image 2019-01-18 at 6.06.30 PM.jpeg" alt="">
             </div>
         </header>
         <main>
             <div id="main" class="container">
                     <div class="card mb-3">
-                        <img class="card-img-top" src="img/WhatsApp Image 2019-01-18 at 6.05.55 PM.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="public/img/WhatsApp Image 2019-01-18 at 6.05.55 PM.jpeg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Lorem Ipsum</h5>
                             <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="card mb-3">
-                        <img class="card-img-top" src="img/WhatsApp Image 2019-01-18 at 6.06.01 PM.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="public/img/WhatsApp Image 2019-01-18 at 6.06.01 PM.jpeg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Lorem Ipsum</h5>
                             <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="card mb-3">
-                        <img class="card-img-top" src="img/WhatsApp Image 2019-01-18 at 6.06.11 PM.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="public/img/WhatsApp Image 2019-01-18 at 6.06.11 PM.jpeg" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Lorem Ipsum</h5>
                             <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
