Arreglo de parrafos

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
                     <div class="card mb-3">
                         <img class="card-img-top" src="public/img/WhatsApp Image 2019-01-18 at 6.05.55 PM.jpeg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem Ipsum</h5>
-                            <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                            <h5 class="card-title">Los ucabistas gritaron “¡no más muertes!” (Fotogalería)</h5>
+                            <p class="card-text">Los estudiantes de la UCAB protestaron en el campus contra la represión y la violencia de los cuerpos de seguridad y honraron la memoria de los jóvenes que han perdido la vida en las manifestaciones de las últimas semanas</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                         <div class="card-footer">
@@ -45,8 +45,9 @@
                     <div class="card mb-3">
                         <img class="card-img-top" src="public/img/WhatsApp Image 2019-01-18 at 6.06.01 PM.jpeg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem Ipsum</h5>
-                            <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                            <h5 class="card-title">Feria de agrupaciones: disfruta de lo bueno y vive nuevas experiencias</h5>
+                            <p class="card-text">Le dimos inicio al semestre de la mejor manera, y en ese sentido llega la tercera edición de la Feria de agrupaciones en el campus, para que descubras y conectes con todas las agrupaciones estudiantiles que hacen vida en la UCAB
+                                Los ucabistas celebramos el pasado 11 de octubre, en los espacios del llamado Fashion Bulevar, otra edición de la feria de agrupaciones organizada por la Dirección General de Desarrollo Estudiantil (DIDES).</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                         <div class="card-footer">
@@ -60,8 +61,8 @@
                     <div class="card mb-3">
                         <img class="card-img-top" src="public/img/WhatsApp Image 2019-01-18 at 6.06.11 PM.jpeg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Lorem Ipsum</h5>
-                            <p class="card-text">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+                            <h5 class="card-title">Los Líderes de la “U” se reunieron nuevamente</h5>
+                            <p class="card-text">“Líderes de la U” volvió a la Universidad Católica Andrés Bello en su 5ta edición con las diversas agrupaciones que hacen vida dentro de nuestra casa de estudios. Desde centros de estudiantes hasta los modelos de las Naciones Unidas fueron partícipes de este encuentro semestral</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div>
                         <div class="card-footer">
